# Cource_django_6

./: .env  dump.rdb  pyproject.toml
config/: settings.py  urls.py
service/: admin.py  apps.py  cron.py  forms.py  models.py  urls.py  views.py
service/migrations/: 0001_initial.py
service/templates/service/: base.html  home.html  mailinglog_list.html  mailingmessage_list.html  mailings_list.html
service/templatetags/: media_path_tag.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
