[tool.poetry]
name = "cource-django-6"
version = "0.1.0"
description = ""
authors = ["teaserfox <teaserfox@gmail>"]
readme = "README.md"
packages = [{include = "cource_django_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"
load-dotenv = "^0.1.0"
pillow = "^10.0.0"
asgiref = "^3.7.2"
async-timeout = "^4.0.3"
django-crontab = "^0.7.1"
redis = "^5.0.0"
sqlparse = "^0.4.4"
typing-extensions = "^4.7.1"
tzdata = "^2023.3"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
